--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Qiansu.GitHub.io</h1>
-      <h2 class="project-tagline">漫步者的博客</h2>
+      <h1 class="project-name">QianSu.GitHub.io</h1>
+      <h2 class="project-tagline">我的博客</h2>
     </section>
 
     <section class="main-content">
       <h1>
 <a id="qiansugithubio" class="anchor" href="#qiansugithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Qiansu.github.io</h1>
 
-<p>漫步者的博客</p>
+<p>徐雨静，你在干嘛？是不是又在撩?</p>
 
       <footer class="site-footer">
 
